notifications revised
